# tauri2demo

./: .gitignore  1.md  package.json
backend/src-tauri/: .env.example  Cargo.toml  build.rs
backend/src-tauri/capabilities/: default.json
backend/src-tauri/src/: lib.rs
backend/src-tauri/src/speech_eval/: auth.rs  commands.rs  rtasr.rs  types.rs
frontend/src/: App.vue  main.css
frontend/src/layouts/: BottomNav.vue  DefaultLayout.vue
frontend/src/pages/chat/: ChatHeader.vue  HistorySidebar.vue  InputArea.vue  MessageItem.vue  MessageList.vue  VoiceButton.vue  index.vue
frontend/src/pages/dictionary/: index.vue
frontend/src/pages/home/: index.vue
frontend/src/pages/scan/: index.vue
frontend/src/pages/settings/: index.vue
frontend/src/pages/speech-eval/: index.vue
frontend/src/services/ocr/: baidu.ts
frontend/src/stores/: settings.ts
script/: build_bywin.sh  build_bywin.sh.bak  install_android_sdk_bywin.sh  install_c_compile_bywin.sh  remove_c_compile_bywin.sh
