[package]
name = "spanishassistant"
version = "0.0.1"
description = "spanish assistant"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-fs = "2"
cpal = "0.15"
mp3lame-encoder = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = "0.4"
url = "2"
futures-util = "0.3"
